cg_cfg/OpenSSL/7f0a8dc/bug_trace/traces/bug_477.txt
/gpfs/automountdir/r92gpfs02/zhengyu/work/ai4code/benchmarks/openssl/src/test/sslapitest.c:3791: error: DEAD_STORE
  The value written to &kexch_alg (type int) is never used.
Showing all 1 steps of the trace


/gpfs/automountdir/r92gpfs02/zhengyu/work/ai4code/benchmarks/openssl/src/test/sslapitest.c:3791:13: Write of unused value
3789.               break;
3790.           case 1:
3791.               kexch_alg = NID_X9_62_prime256v1;
                    ^
3792.               break;
3793.           case 2:
